--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 </div>
 
 <div class="room-container">
-    <img src="./img/room_1.png" class="room">    
+    <div class="room">
+    <img src="./img/room_1.png">    
+    </div>
+    <div class="text-1">
+    <p>OUR<br>ROOMS<br>ARE<br>FILLED<br>WITH LOVE<br>AND<br>HISTORY</p>
+</div>
 </div>
 
 
