--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button class="btn book">Book Now</button></a>
 </nav>
 <div class="step">
-    <h1>STEP INTO</h1>
+    <p>STEP INTO</p>
 </div>
 <img src="./img/door.png" class="door">
 
@@ -38,13 +38,49 @@
 </div>
 
 <div class="room-container">
-    <div class="room">
+    <div class="room1">
     <img src="./img/room_1.png">    
     </div>
     <div class="text-1">
     <p>OUR<br>ROOMS<br>ARE<br>FILLED<br>WITH LOVE<br>AND<br>HISTORY</p>
 </div>
 </div>
+
+<div class="room-container2">
+<div class="card">
+    <img src="./img/hotel-sign 1.png" class="sign1">
+        <p>Flexible plans</p>
+</div>
+<a href="#" class="hide">Learn more</a>
+
+<div class="card2">
+    <img src="./img/bell.png" class="sign1">
+        <p>Making change easier</p>
+</div>
+<a href="#" class="hide">Learn more</a>
+
+<div class="card">
+    <img src="./img/bedroom 1.png" class="sign1">
+        <p>Your safety and well-being</p>
+</div>
+<a href="#" class="hide">Learn more</a>
+<div class="room2">
+    <img src="./img/room_2.png">
+</div>
+</div>
+<div class="room-container3">
+    <div class="room3">
+    <img src="./img/room_3.png">    
+    </div>
+    <div class="text-2">
+    <p>STAY WITH<br>US AND<br>FEEL AT<br>HOME</p>
+    <a href="booking.html">
+    <button class="btn2 book">Book Now</button></a>
+
+</div>
+</div>
+
+  
 
 
 </body>
