--- a/index.html
+++ b/index.html
@@ -80,6 +80,43 @@
 </div>
 </div>
 
+<div class="locations">
+    <p>OUR LOCATIONS</p>
+</div>
+
+<div class="map">
+    <img src="./img/map.png">
+</div>
+
+<footer class="footer">
+    <div class="footer-left">
+        <p>explore</p>
+        <li><a href="#">Holiday Out Amsterdam</a></li>
+        <li><a href="#">Holiday Out Paris</a></li>
+        <li><a href="#">Holiday Out Kyiv</a></li>
+        <li><a href="#">Holiday Out Rome</a></li>
+        <li><a href="#">Holiday Out Berlin</a></li>
+        <li><a href="#">Holiday Out Prague</a></li>
+    </div>
+
+    <div class="footer-middle">
+        <p>about us</p>
+        <li><a href="#">About Holiday Out</a></li>
+        <li><a href="#">Sustainability</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Need help?</a></li>
+        <li><a href="#">Careers</a></li>
+    </div>
+    <div class="footer-right">
+        <p>social media</p>
+        <li><img src="./img/insta.png"></li>
+        <li><img src="./img/facebook.png"></li>
+        <li><img src="./img/linkedin.png"></li>
+        <li><img src="./img/tiktok.png"></li>
+    </div>
+</footer>
+
+
   
 
 
