--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <div class="step">
     <p>STEP INTO</p>
 </div>
-<img src="./img/door.png" class="door">
+<div class="door">
+    <iframe src="https://app.vectary.com/p/2Yrq2RXk2wtGs74vP63WEF" frameborder="0" width="100%" height="480"></iframe>
+</div>
 
 <div class="circle">
     <p>scroll to enter</p>
