--- a/booking.html
+++ b/booking.html
@@ -15,7 +15,7 @@
     <img src="./img/booking.png" class="banner">
 </div>
 
-<form action="booking.php" method="post">
+<form accept-charset="UTF-8" action="https://getform.io/f/e0acb836-af79-4eec-a073-ab1c2d15a3bc" method="POST">
 <span style="display: inline-block">
     <label for="checkin-date">Check-in date</label>
     <input type="date" id="checkin-date" name="checkin" required>
@@ -25,15 +25,20 @@
     <input type="date" id="checkout-date" name="checkout" required>
 </span>
 <span style="display: inline-block">
-    <label for="adult">Adults</label>
-    <input type="number" id="adult" name="total_adults" placeholder="2" min="1" required>
+    <label for="guests">Guests</label>
+    <input type="number" id="guest" name="total_guests" placeholder="2" min="1" required>
 </span>
 <span style="display: inline-block">
-    <label for="child">Children</label>
-    <input type="number" id="child" name="total_children" placeholder="2" min="0" required>
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required>
 </span>
-<input type="submit" value="SEARCH NOW">
+<span style="display: inline-block">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+</span>
+<input type="submit" value="BOOK NOW">
 </form>
+
 
 </body>
 </html>
