--- a/booking.html
+++ b/booking.html
@@ -16,6 +16,20 @@
 </div>
 
 <form accept-charset="UTF-8" action="https://getform.io/f/e0acb836-af79-4eec-a073-ab1c2d15a3bc" method="POST">
+    <div class="custom-select">
+    <span style="display:flex">
+        <select id="standard-select">
+            <option value="Select location">Select location</option>
+
+            <option value="Amsterdam">Amsterdam</option>
+            <option value="Paris">Paris</option>
+            <option value="Kyiv">Kyiv</option>
+            <option value="Rome">Rome</option>
+            <option value="Berlin">Berlin</option>
+            <option value="Prague">Prague</option>
+        </select>
+    </span>
+</div>
 <span style="display: inline-block">
     <label for="checkin-date">Check-in date</label>
     <input type="date" id="checkin-date" name="checkin" required>
