--- a/booking.html
+++ b/booking.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="booking.css">
-        <title>Booking</title>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@1,300&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');         
-         </style>
-    </head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="booking.css">
+    <title>Booking</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@1,300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
+    </style>
+</head>
+
 <body>
-<div class="booking-banner">
-    <img src="./img/booking.png" class="banner">
-</div>
+    <div class="booking-banner">
+        <img src="./img/booking.png" class="banner">
+    </div>
 
-<form accept-charset="UTF-8" action="https://getform.io/f/e0acb836-af79-4eec-a073-ab1c2d15a3bc" method="POST">
-    <div class="custom-select">
-    <span style="display:flex">
-        <select id="standard-select">
-            <option value="Select location">Select location</option>
-
-            <option value="Amsterdam">Amsterdam</option>
-            <option value="Paris">Paris</option>
-            <option value="Kyiv">Kyiv</option>
-            <option value="Rome">Rome</option>
-            <option value="Berlin">Berlin</option>
-            <option value="Prague">Prague</option>
-        </select>
-    </span>
-</div>
-<span style="display: inline-block">
-    <label for="checkin-date">Check-in date</label>
-    <input type="date" id="checkin-date" name="checkin" required>
-</span>
-<span style="display: inline-block">
-    <label for="checkout-date">Check-out date</label>
-    <input type="date" id="checkout-date" name="checkout" required>
-</span>
-<span style="display: inline-block">
-    <label for="guests">Guests</label>
-    <input type="number" id="guest" name="total_guests" placeholder="2" min="1" required>
-</span>
-<span style="display: inline-block">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
-</span>
-<span style="display: inline-block">
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-</span>
-<input type="submit" value="BOOK NOW">
-</form>
+    <form accept-charset="UTF-8" action="https://getform.io/f/e0acb836-af79-4eec-a073-ab1c2d15a3bc" method="POST">
+            <span style="display:flex">
+                <label for="location">Select location</label>
+                <select name="locations"  id="locations">
+                    <option value="Select location">Select location</option>
+                    <option value="Amsterdam">Amsterdam</option>
+                    <option value="Paris">Paris</option>
+                    <option value="Kyiv">Kyiv</option>
+                    <option value="Rome">Rome</option>
+                    <option value="Berlin">Berlin</option>
+                    <option value="Prague">Prague</option>
+                </select>
+            </span>
+        <span style="display: inline-block">
+            <label for="checkin-date">Check-in date</label>
+            <input type="date" id="checkin-date" name="checkin" required>
+        </span>
+        <span style="display: inline-block">
+            <label for="checkout-date">Check-out date</label>
+            <input type="date" id="checkout-date" name="checkout" required>
+        </span>
+        <span style="display: inline-block">
+            <label for="guests">Guests</label>
+            <input type="number" id="guest" name="total_guests" placeholder="2" min="1" required>
+        </span>
+        <span style="display: inline-block">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+        </span>
+        <span style="display: inline-block">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+        </span>
+        <input type="submit" value="BOOK NOW">
+    </form>
 
 
 </body>
+
 </html>
